--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,12 @@ services:
     build:
       context: .
       dockerfile: Services/Dockerfile
+    ports:
+       - "8000:443"
+    depends_on:
+       - db
+  db:
+    image: "mcr.microsoft.com/mssql/server"
+    environment:
+        SA_PASSWORD: "Hackathon_password123"
+        ACCEPT_EULA: "Y"
