--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,23 @@ services:
        - "8000:443"
     depends_on:
        - db
+       - rabbitmq
+
   db:
     image: "mcr.microsoft.com/mssql/server"
     environment:
         SA_PASSWORD: "Hackathon_password123"
         ACCEPT_EULA: "Y"
+
+  rabbitmq: # login guest:guest
+    image: rabbitmq:3-management
+    hostname: "rabbitmq"
+    labels:
+      NAME: "rabbitmq"
+    ports:
+    - "4369:4369"
+    - "5671:5671"
+    - "5672:5672"
+    - "25672:25672"
+    - "15671:15671"
+    - "15672:15672"
